--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,5 @@
 galaxy_info:
-  role_name: os_user
+  role_name: admin_user
   author: youyo
   company: heptagon inc.
   description: Create os user
